--- a/data/page/css/all_font.css
+++ b/data/page/css/all_font.css
@@ -2,7 +2,7 @@
 @font-face {font-family: "Noto Sans";src: url(data/fonts/global/NotoSans-Bold.ttf);font-weight: bold;}
 @font-face {font-family: "Alibaba PuHuiTi 2.0";src: url(data/fonts/alibaba/AlibabaPuHuiTi-2-55-Regular.ttf);}
 @font-face {font-family: "Alibaba PuHuiTi 2.0";src: url(ddata/fonts/alibaba/AlibabaPuHuiTi-2-85-Bold.ttf);font-weight: bold;}
-@font-face {font-family: "Alibaba Sans Thai";src: url(data/fonts/thai/NotoSansThai-Regular.otf);}
-@font-face {font-family: "Alibaba Sans Thai";src: url(data/fonts/thai/NotoSansThai-Bold.otf);font-weight: bold;}
+@font-face {font-family: "Alibaba Sans Thai";src: url(data/fonts/thai/AlibabaSansThai-Rg.ttf);}
+@font-face {font-family: "Alibaba Sans Thai";src: url(data/fonts/thai/AlibabaSansThai-Bd.ttf);font-weight: bold;}
 @font-face {font-family: "Fira Code";src: url(data/fonts/firacode/FiraCode-Regular.ttf);}
 @font-face {font-family: "Fira Code";src: url(data/fonts/firacode/FiraCode-Bold.ttf);font-weight: bold;}
